examples/typechecking/break_continue_not_in_loop.an
break_at_top () = break

continue_at_top () = continue

for_with_non_integers () =
    for i in "zero" .. "ten" do
        _ = i

main () = ()

// args: --check --no-color
// expected exit status: 1
// expected stderr:
// examples/typechecking/break_continue_not_in_loop.an:1:19
// 1 | break_at_top () = break	// error: `break` can only be used inside a loop
//   |                   ^^^^^
// 
// examples/typechecking/break_continue_not_in_loop.an:3:22
// 3 | continue_at_top () = continue	// error: `continue` can only be used inside a loop
//   |                      ^^^^^^^^
// 
// examples/typechecking/break_continue_not_in_loop.an:6:14
// 5 | for_with_non_integers () =
//   |     // error: This range bound has type String but I32 was expected
// 6 |     for i in "zero" .. "ten" do
//   |              ^^^^^^
// 7 |         _ = i
// 
// examples/typechecking/break_continue_not_in_loop.an:6:24
// 5 | for_with_non_integers () =
//   |     // error: This range bound has type String but I32 was expected
// 6 |     for i in "zero" .. "ten" do
//   |                        ^^^^^
// 7 |         _ = i
// 
// Found 4 errors and 0 warnings

